--- a/ch.hesge.csim2.ui/conf/csim2.conf
+++ b/ch.hesge.csim2.ui/conf/csim2.conf
@@ -8,6 +8,11 @@
 window-size = 1024x768 
 
 #
+# source paths
+#
+rootSourcePath = c:/data/projects/genetics2
+
+#
 # application look and feel
 look-and-feel = com.alee.laf.WebLookAndFeel
 
