--- a/ch.hesge.csim2.ui/.classpath
+++ b/ch.hesge.csim2.ui/.classpath
@@ -31,5 +31,8 @@
 	<classpathentry kind="lib" path="lib/owl/xercesImpl-2.11.0.jar"/>
 	<classpathentry kind="lib" path="lib/owl/xml-apis-1.4.01.jar"/>
 	<classpathentry kind="lib" path="lib/log4j/log4j-api-2.3.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j/log4j-slf4j-impl-2.3.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j/slf4j-api-1.7.12.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j/slf4j-ext-1.7.12.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
