--- a/ch.hesge.csim2.ui/conf/csim2.conf
+++ b/ch.hesge.csim2.ui/conf/csim2.conf
@@ -10,7 +10,7 @@ window-size = 1024x768
 #
 # source paths
 #
-rootSourcePath = c:/data/projects/samples
+rootSourcePath = d:/data/projects/samples
 
 #
 # application look and feel
