--- a/ch.hesge.cragsi/.settings/org.eclipse.core.resources.prefs
+++ b/ch.hesge.cragsi/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,4 @@
 eclipse.preferences.version=1
-encoding//res/adoo.export.pi\u00E8ces-compatble.account.move.csv=UTF-8
-encoding//res/adoo.export.plan-comptable.account.account.csv=UTF-8
-encoding//res/adoo.export.\u00E9critures.account.move.line.csv=UTF-8
+encoding//doc/5.Fichiers\ ODOO/adoo.export.pi\u00E8ces-comptable.account.move.csv=UTF-8
+encoding//doc/5.Fichiers\ ODOO/adoo.export.\u00E9critures.account.move.line.csv=UTF-8
+encoding//doc/5.Fichiers\ ODOO/adoo.plan-comptable.csv=UTF-8
